סיום שדות חיפוש

--- a/JewlryShop2/appsettings.json
+++ b/JewlryShop2/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "Server="
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=WX1129718\\SQLEXPRESS;Database=JewelryShop2Db;Trusted_Connection=True;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=WX1129718\\SQLEXPRESS;Database=JewelryShop2Db;Trusted_Connection=True;TrustServerCertificate=True"
+
+  }
+
 }
